<resources>
    <string name="app_name">HomeWork_AndroidStudio</string>
    <string name="nmedia">NMedia!</string>
    <string name="lable_avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="likes">Likes</string>
    <string name="reposts">Reposts</string>
    <string name="views">Views</string>
    <string name="title_activity_card_post" translatable="false">card_post</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>