<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spasing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spasing"
        android:contentDescription="@string/lable_avatar"
        app:layout_constraintBottom_toBottomOf="@id/header_barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spasing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/publisher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginEnd="@dimen/common_spasing"
        android:layout_marginBottom="@dimen/common_spasing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, publisher, menu"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spasing"
        android:layout_marginBottom="@dimen/common_spasing"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@sample/posts.json/data/post"
        app:layout_constraintTop_toBottomOf="@id/header_barrier2"
        app:layout_constraintBottom_toTopOf="@id/post_botom_barrier"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/post_botom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"/>

    <ImageButton
        android:id="@+id/likes_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spasing"
        android:background="@color/transparent"
        android:contentDescription="@string/likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_botom_barrier"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@sample/posts.json/data/likes"
        app:layout_constraintBottom_toBottomOf="@+id/likes_ico"
        app:layout_constraintLeft_toRightOf="@id/likes_ico"
        app:layout_constraintTop_toTopOf="@+id/likes_ico" />

    <ImageButton
        android:id="@+id/reposts_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spasing"
        android:background="@color/transparent"
        app:layout_constraintLeft_toRightOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/post_botom_barrier"
        app:layout_constraintTop_toTopOf="@id/likes_ico"
        android:contentDescription="@string/reposts"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/reposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@sample/posts.json/data/reposts"
        app:layout_constraintBottom_toBottomOf="@+id/reposts_ico"
        app:layout_constraintLeft_toRightOf="@id/reposts_ico"
        app:layout_constraintTop_toTopOf="@+id/reposts_ico" />

    <ImageView
        android:id="@+id/views_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/likes_ico"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintRight_toLeftOf="@id/views"
        android:contentDescription="@string/views"
        />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@sample/posts.json/data/views"
        app:layout_constraintBottom_toBottomOf="@+id/views_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/views_ico"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/views_ico" />


</androidx.constraintlayout.widget.ConstraintLayout>